Mention more hardware supported by these drivers (sync with i386.html webpage), aaron@ ok

--- a/share/man/man4/dc.4
+++ b/share/man/man4/dc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dc.4,v 1.18 2001/03/01 16:11:16 aaron Exp $
+.\"	$OpenBSD: dc.4,v 1.19 2001/04/11 20:49:07 miod Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu>. All rights reserved.
@@ -141,6 +141,8 @@ Xircom CardBus, including RealPort models (Xircom X3201)
 IBM EtherJet 10/100 CardBus (Intel 21143)
 .It
 Accton EN1217 (98715) and EN2242 (ADMtek Centaur)
+.It
+Mototech ME316 (ADMtek Centaur)
 .El
 .Pp
 The
