--- a/share/man/man4/de.4
+++ b/share/man/man4/de.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: de.4,v 1.10 2000/10/18 02:38:22 aaron Exp $
+.\"	$OpenBSD: de.4,v 1.11 2001/04/11 20:49:07 miod Exp $
 .\"
 .\" Copyright (c) 1997 David E. O'Brien
 .\"
@@ -40,10 +40,11 @@ Equipment DC21x4x based self-contained Ethernet chips.
 This includes, among others, the following models:
 .Pp
 .Bl -tag -width -offset indent -compact
-.It DEC PCI DE435, EISA DE425, DE450, DE500
-.It SMC 8432, 9332, 9334
-.It Cogent EM100FX and EM440TX
 .It Asante
+.It Cogent EM100FX and EM440TX
+.It DEC PCI DE435, EISA DE425, DE450, DE500
+.It older LinkSys 10, 10/100
+.It SMC 8432, 9332, 9334
 .It ZNYX ZX3xx
 .El
 .Pp
