Require full name in MAINTAINER; espie@ ok, pointed out by aaron@

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.32 2001/04/10 17:48:10 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.33 2001/04/12 10:26:58 avsm Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -552,7 +552,7 @@ to ${LIBTOOL} ${LIBTOOL_FLAGS}.
 .It Ev LOCALBASE
 where other ports have already been installed (default: /usr/local)
 .It Ev MAINTAINER
-E-mail address of the port's maintainer.
+E-mail address with full name of the port's maintainer.
 Defaults to ports@openbsd.org.
 .It Ev MAKE_ENV
 Environment variables passed to make invocations.
