document shortcut; noted by bk@rt.fm

--- a/usr.bin/vmstat/vmstat.8
+++ b/usr.bin/vmstat/vmstat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: vmstat.8,v 1.18 2000/11/10 05:10:42 aaron Exp $
+.\"	$OpenBSD: vmstat.8,v 1.19 2001/04/12 18:06:41 deraadt Exp $
 .\"	$NetBSD: vmstat.8,v 1.12 1996/05/10 23:19:30 thorpej Exp $
 .\"
 .\" Copyright (c) 1986, 1993
@@ -49,6 +49,8 @@
 .Op Fl N Ar system
 .Op Fl w Ar wait
 .Op disks
+.Nm vmstat
+.Op Ar count
 .Sh DESCRIPTION
 .Nm
 reports certain kernel statistics kept about process, virtual memory,
