--- a/usr.sbin/iostat/iostat.8
+++ b/usr.sbin/iostat/iostat.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: iostat.8,v 1.15 2000/11/09 17:53:14 aaron Exp $
+.\"	$OpenBSD: iostat.8,v 1.16 2001/04/12 18:06:42 deraadt Exp $
 .\"	$NetBSD: iostat.8,v 1.10 1996/10/25 18:21:57 scottr Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
@@ -50,6 +50,8 @@ statistics
 .Op Fl N Ar system
 .Op Fl w Ar wait
 .Op Ar drives
+.Nm iostat
+.Op Ar count
 .Sh DESCRIPTION
 .Nm iostat
 displays kernel
