typo. ok deraadt@

--- a/sbin/ancontrol/ancontrol.8
+++ b/sbin/ancontrol/ancontrol.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ancontrol.8,v 1.7 2001/02/26 06:19:34 tholo Exp $
+.\"	$OpenBSD: ancontrol.8,v 1.8 2001/04/13 16:53:50 jakob Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu> All rights reserved.
@@ -258,7 +258,7 @@ This
 timeout defaults to 10000 milliseconds (10 seconds) but may be changed
 with this option.
 The timeout should be specified in milliseconds.
-.Fl l Ar station name
+.It Fl l Ar station name
 Set the station name used internally by the NIC.
 The
 .Ar station name
