--- a/share/man/man4/nsphyter.4
+++ b/share/man/man4/nsphyter.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nsphyter.4,v 1.2 2000/10/18 02:38:23 aaron Exp $
+.\"	$OpenBSD: nsphyter.4,v 1.3 2001/04/16 00:13:01 jason Exp $
 .\"
 .\" Copyright (c) 2000 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .Os
 .Sh NAME
 .Nm nsphyter
-.Nd National Semiconductor DP83843 10/100 Ethernet PHY driver
+.Nd National Semiconductor DP83843/DP83815 10/100 Ethernet PHY driver
 .Sh SYNOPSIS
 .Cd "nsphyter* at mii? phy ?"
 .Sh DESCRIPTION
@@ -44,6 +44,9 @@ driver supports the National Semiconductor
 .Tn PHYTER
 .Tn DP83840
 Ethernet PHYs.
+This driver also supports the integrated PHY on the
+.Tn MACPHYTER
+.Tn DP83815 .
 These PHYs are found on a variety of high-performance Ethernet interfaces.
 .Sh SEE ALSO
 .Xr ifmedia 4 ,
