Actually permit setting the transmit key in WEP mode; from Kurt Miller. Correctly display number and order of WEP keys; from Kurt Miller. Fixes part of PR 1754; ok deraadt@

--- a/sbin/ancontrol/ancontrol.8
+++ b/sbin/ancontrol/ancontrol.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ancontrol.8,v 1.8 2001/04/13 16:53:50 jakob Exp $
+.\"	$OpenBSD: ancontrol.8,v 1.9 2001/04/16 00:39:38 tholo Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu> All rights reserved.
@@ -219,7 +219,7 @@ option: selection
 sets the receive diversity and
 .Ar 1
 sets the transmit diversity.
-.It Fl d Ar "0|1|2|3"
+.It Fl e Ar "0|1|2|3"
 Set the transmit WEP key to use.
 Note that until this command is issued, the device will use the
 last key programmed.  The transmit key is stored in NVRAM.
