man page for 3c990

--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.34 2001/03/29 23:53:38 krw Exp $
+.\"	$OpenBSD: pci.4,v 1.35 2001/04/16 02:08:14 jason Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -203,6 +203,8 @@ Alteon Networks Tigon I and Tigon II Gigabit Ethernet interfaces.
 Texas Instruments ThunderLAN-based Ethernet interfaces.
 .It Xr tx 4
 SMC 9432 10/100 Mbps Ethernet interfaces.
+.It Xr txp 4
+3Com 3XP Typhoon/Sidewinder (3C990) 10/100 Mbps Ethernet interfaces.
 .It Xr vr 4
 VIA Technologies VT3043 and VT86C100A Ethernet interfaces.
 .It Xr wb 4
