We default to infrastructure mode now; say so in the man page instead of claiming we do ad-hoc by default.  ok ericj@

--- a/sbin/ancontrol/ancontrol.8
+++ b/sbin/ancontrol/ancontrol.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ancontrol.8,v 1.9 2001/04/16 00:39:38 tholo Exp $
+.\"	$OpenBSD: ancontrol.8,v 1.10 2001/04/16 06:37:39 tholo Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu> All rights reserved.
@@ -294,8 +294,7 @@ Valid selections are
 for ad-hoc mode and
 .Ar 1
 for infrastructure mode.
-The default driver setting is for ad-hoc
-mode.
+The default driver setting is for infrastructure mode.
 .It Fl p Ar tx power
 Set the transmit power level in milliwatts.
 Valid power settings
