--- a/share/man/man8/man8.vax/MAKEDEV.8
+++ b/share/man/man8/man8.vax/MAKEDEV.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: MAKEDEV.8,v 1.6 2001/01/27 22:53:43 brad Exp $
+.\"	$OpenBSD: MAKEDEV.8,v 1.7 2001/04/18 11:14:22 bjc Exp $
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -34,8 +34,10 @@
 .\"
 .Dd March 22, 1991
 .Dt MAKEDEV 8 vax
+.Os
 .Sh NAME
-MAKEDEV \- create system and device special files
+.Nm MAKEDEV
+.Nd create system and device special files
 .Sh SYNOPSIS
 .Nm MAKEDEV
 .Ar name
