--- a/share/man/man8/man8.vax/drtest.8
+++ b/share/man/man8/man8.vax/drtest.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: drtest.8,v 1.7 2000/12/15 14:31:20 aaron Exp $
+.\"	$OpenBSD: drtest.8,v 1.8 2001/04/18 11:14:23 bjc Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .\"     from: @(#)drtest.8	6.3 (Berkeley) 3/16/91
 .\"
 .Dd March 16, 1991
-.Dt DRTEST 8
+.Dt DRTEST 8 vax
 .Os
 .Sh NAME
 .Nm drtest
