--- a/share/man/man8/man8.vax/installboot.8
+++ b/share/man/man8/man8.vax/installboot.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: installboot.8,v 1.6 2000/03/02 14:46:51 todd Exp $
+.\"	$OpenBSD: installboot.8,v 1.7 2001/04/18 11:14:23 bjc Exp $
 .\" Copyright (c) 1986, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -33,10 +33,10 @@
 .\"     from: @(#)installboot.8	7.2 (Berkeley) 3/16/91
 .\"
 .Dd March 16, 1991
-.Dt INSTALLBOOT 8
+.Dt INSTALLBOOT 8 vax
 .Os
 .Sh NAME
-.Nm VAX installboot
+.Nm installboot
 .Nd installs a boot program in a file system
 .Sh SYNOPSIS
 .Nm installboot
@@ -60,22 +60,23 @@ boot blocks
 .It Pa /usr/mdec/boot??
 boot programs
 .El
-.Sh SEE ALSO
-.Xr dd 1 ,
-.Xr newfs 8
 .Sh EXAMPLES
 .Bd -literal -offset indent -compact
 cd /usr/mdec
 installboot raboot bootra /dev/ra0a
 .Ed
-.Sh BUGS
-There is no convenient way to determine the names of the boot blocks
-and boot programs without
-.Em a priori
-knowledge of one's make of disk.
+.Sh SEE ALSO
+.Xr dd 1 ,
+.Xr newfs 8
 .Sh HISTORY
 The
 .Nm
 command appeared in
 .Bx 4.3 tahoe .
+.Sh AUTHORS
 This manual page was written by Geoff Collyer.
+.Sh BUGS
+There is no convenient way to determine the names of the boot blocks
+and boot programs without
+.Em a priori
+knowledge of one's make of disk.
