another vax tag

--- a/share/man/man4/man4.vax/hk.4
+++ b/share/man/man4/man4.vax/hk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hk.4,v 1.4 1999/06/05 13:18:38 aaron Exp $
+.\"	$OpenBSD: hk.4,v 1.5 2001/04/18 11:27:39 hugh Exp $
 .\"	$NetBSD: hk.4,v 1.3 1996/03/03 17:13:37 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -35,7 +35,7 @@
 .\"     from: @(#)hk.4	6.4 (Berkeley) 3/27/91
 .\"
 .Dd March 27, 1991
-.Dt HK 4
+.Dt HK 4 vax
 .Os
 .Sh NAME
 .Nm hk
