We're talking about SHA1 here, not MD5; d.doroshenko@omnitel.net

--- a/usr.sbin/mtree/mtree.8
+++ b/usr.sbin/mtree/mtree.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mtree.8,v 1.15 2000/11/09 17:53:19 aaron Exp $
+.\"	$OpenBSD: mtree.8,v 1.16 2001/04/18 14:39:24 aaron Exp $
 .\"	$NetBSD: mtree.8,v 1.4 1995/03/07 21:26:25 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
@@ -288,7 +288,7 @@ should be run against the on-line specifications.
 While it is possible for the bad guys to change the on-line specifications
 to conform to their modified binaries, it is believed to be
 impractical for them to create a modified specification which has
-the same MD5 digest as the original.
+the same SHA1 digest as the original.
 .Pp
 The
 .Fl d
