--- a/share/man/man4/dc.4
+++ b/share/man/man4/dc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dc.4,v 1.19 2001/04/11 20:49:07 miod Exp $
+.\"	$OpenBSD: dc.4,v 1.20 2001/04/18 14:48:15 aaron Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu>. All rights reserved.
@@ -43,12 +43,12 @@
 .Sh DESCRIPTION
 The
 .Nm
-driver provides support for several PCI Fast Ethernet adapters and
-embedded controllers based on the following chipsets:
+driver provides support for several PCI and CardBus Fast Ethernet adapters
+and embedded controllers based on the following chipsets:
 .Pp
 .Bl -bullet -compact -offset indent
 .It
-DEC/Intel 21143
+DEC/Intel 21143 PCI and CardBus
 .It
 Macronix 98713, 98713A, 98715, 98715A, 98725, 98727, and 98732
 .It
