--- a/share/man/man8/rc.8
+++ b/share/man/man8/rc.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rc.8,v 1.14 2001/03/11 05:46:51 aaron Exp $
+.\"	$OpenBSD: rc.8,v 1.15 2001/04/18 20:58:54 jakob Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -184,6 +184,8 @@ login class as described in
 .Xr login.conf 5 ,
 .Xr sysctl.conf 5 ,
 .Xr init 8 ,
+.Xr rc.conf 8 ,
+.Xr rc.shutdown 8 ,
 .Xr reboot 8 ,
 .Xr savecore 8
 .Sh HISTORY
