--- a/share/man/man4/ddb.4
+++ b/share/man/man4/ddb.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ddb.4,v 1.25 2001/03/01 16:11:16 aaron Exp $
+.\"	$OpenBSD: ddb.4,v 1.26 2001/04/18 23:18:56 art Exp $
 .\"	$NetBSD: ddb.4,v 1.5 1994/11/30 16:22:09 jtc Exp $
 .\"
 .\" Mach Operating System
@@ -371,6 +371,8 @@ Sync disks and reboot.
 Dump core and reboot.
 .It Ic boot dump
 Sync disks, dump core and reboot.
+.It Ic boot halt
+Just halt.
 .El
 .\" --------------------
 .It Xo
