--- a/share/man/man4/sk.4
+++ b/share/man/man4/sk.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sk.4,v 1.9 2001/04/14 20:07:04 deraadt Exp $
+.\"	$OpenBSD: sk.4,v 1.10 2001/04/20 02:16:31 deraadt Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -48,6 +48,10 @@ driver provides support for the SysKonnect SK-984x series PCI
 Gigabit Ethernet adapters, including the following:
 .Pp
 .Bl -bullet -offset indent -compact
+.It
+SK-9821 SK-NET GE-T single port, copper adapter
+.It
+SK-9822 SK-NET GE-T dual port, copper adapter
 .It
 SK-9841 SK-NET GE-LX single port, single mode fiber adapter
 .It
