systat does not use /dev/drum

--- a/usr.bin/systat/systat.1
+++ b/usr.bin/systat/systat.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: systat.1,v 1.19 2000/11/09 17:52:40 aaron Exp $
+.\"	$OpenBSD: systat.1,v 1.20 2001/04/20 16:43:39 millert Exp $
 .\"	$NetBSD: systat.1,v 1.6 1996/05/10 23:16:39 thorpej Exp $
 .\"
 .\" Copyright (c) 1985, 1990, 1993
@@ -496,8 +496,6 @@ Multiple drives may be specified, separated by spaces.
 for the namelist
 .It Pa /dev/kmem
 for information in main memory
-.It Pa /dev/drum
-for information about swapped out processes
 .It Pa /etc/hosts
 for host names
 .It Pa /etc/networks
