--- a/usr.sbin/user/usermod.8
+++ b/usr.sbin/user/usermod.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: usermod.8,v 1.7 2000/05/05 23:22:39 ho Exp $ */
+.\" $OpenBSD: usermod.8,v 1.8 2001/04/20 21:39:50 jakob Exp $ */
 .\" $NetBSD: usermod.8,v 1.4 2000/02/28 05:10:57 enami Exp $ */
 .\"
 .\"
@@ -32,7 +32,7 @@
 .\" SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd November 30, 1999
+.Dd April 3, 2001 
 .Dt USERMOD 8
 .Os
 .Sh NAME
@@ -44,7 +44,7 @@
 .Op Fl c Ar comment
 .Op Fl d Ar home-dir
 .Op Fl e Ar expiry-time
-.Op Fl f Ar inactive-secs
+.Op Fl f Ar password-change-secs
 .Op Fl g Ar gid/name/=uid
 .Op Fl l Ar new-login
 .Op Fl m
@@ -77,7 +77,14 @@ the username, and, perhaps, contact information for the user.
 .It Fl d Ar home-directory
 is the home directory which will be created and populated for the user,
 should the -m option be specified.
-.It Fl e Ar secs-to-expiry
+.It Fl e Ar expiry-time
+provides the date at which the account expires. This should be given
+in a standard time format (%c). This is unset by default.
+This value can be preset for all users by using the
+.Ar expire
+field in /etc/usermgmt.conf file - it has the format:
+.Ar expire <expiry-time> .
+.It Fl f Ar password-change-secs 
 provides the number of seconds since the epoch (UTC) at
 which the current password change expire. This
 can be used to implement password aging.
@@ -89,11 +96,11 @@ See
 for more details.
 This value can be preset for all users
 by using the
-.Ar expire
+.Ar inactive 
 field in the
 .Pa /etc/usermgmt.conf
 file - it has the format:
-.Ar expire <secs-to-expiry> .
+.Ar inactive <password-change-secs> .
 .It Fl g Ar gid/name/=uid
 gives the group name or identifier to be used for the new user's primary group.
 If this is
