--- a/sbin/pdisk/pdisk.8
+++ b/sbin/pdisk/pdisk.8
@@ -1,136 +1,111 @@
-.TH PDISK 8 "26 September 1997" "MkLinux DR2" "Linux Programmer's Manual"
-.SH NAME
-pdisk \- Apple partition table editor for Linux
-.SH SYNOPSIS
-.B pdisk
-.B "[\-h|\--help]"
-.br
-.B pdisk
-.B "[\-i|\--interactive]"
-.br
-.B pdisk
-.B "[\-l|\--list [name ...]]"
-.br
-.B pdisk
-device ...
-.br
-.B pdisk
-.B "[\-v|\--version] [\-r|\--readonly] [\-abbr] [\--logical] [\-c|\--compute_size]"
-.SH DESCRIPTION
-.B pdisk
+.Dd September 26, 1997
+.Dt PDISK 8
+.Os
+.Sh NAME
+.Nm pdisk
+.Nd HFS(DPME) partition maintenance program
+.Sh SYNOPSIS
+.Nm pdisk
+.Op Fl h
+.Op Fl i
+.Op Fl l
+.Op Fl r
+.Op Fl c
+.Ar device
+.Sh DESCRIPTION
+.Nm
 is a menu driven program which partitions disks using the standard Apple
 disk partitioning scheme described in "Inside Macintosh: Devices".
 It does not support the intel/dos partitioning scheme supported by 
 .BR fdisk .
 The
-.I device
+.Ar device
 is usually one of the following:
 
-.nf
-.RS
-/dev/sda
-/dev/sdb
-/dev/sdc
-/dev/sdd
-/dev/sde
-/dev/sdf
-/dev/sdg
-/dev/hda
-/dev/hdb
+/dev/sd0c
+/dev/sd1c
+/dev/sd2c
+/dev/sd3c
+/dev/sd4c
+/dev/sd5c
+/dev/sd6c
+/dev/wd0c
+/dev/wd1c
+/dev/wd2c
+/dev/wd3c
 
-.RE
-.fi
-MkLinux interprets device names differently than standard Linux.
-In MkLinux /dev/sda is the device at SCSI id 0, /dev/sdb is the device at SCSI
-id 1, and so on.
-In standard Linux /dev/sda is the first hard disk on the SCSI bus (i.e. the
-one with the lowest id), /dev/sdb is the second hard disk, and so on.
-The
-.I partition
-is a
-.I device
-name followed by a partition number.
-The partition number is the index (starting from one) of the partition
-map entry in the partition map.
-For example,
-.B /dev/sda2
-is the partition described by the second entry in the partiton map on /dev/sda.
-
-.SH OPTIONS
-.TP
-.B \-v | \--version
-Prints version number of the
-.B pdisk
-program.
-.TP
-.B \-h | \--help
+.Pp
+The options are as follows:
+.Bl -tag -width Ds
+.It Fl v
+Prints version number of the program.
+.It Fl h
 Prints a rather lame set of help messages for the
-.B pdisk
+.Nm
 program.
-.TP
-.B \-i | \--interactive
+.It Fl i
 Causes
-.B pdisk
+.Nm
 to go into an interactive mode similar to the MacOS version of the program.
-.TP
-.B \-l | \--list
-If no
-.IR name s
-are present then lists the partition tables for
-.BR /dev/sda ,
-.BR /dev/sdb ,
-.BR /dev/sdc ,
-.BR /dev/sdd ,
-.BR /dev/sde ,
-.BR /dev/sdf ,
-and
-.BR /dev/sdg .
-Otherwise, lists the partition tables for the specified
-.IR name s.
-.TP
-.B \-r | \--readonly
+.It Fl l
+List the partition tables for the specified
+.Ar devices
+.
+.Tp
+.It Fl r
 Prevents
-.B pdisk
+.Nm
 from writing to the device.
 .TP
-.B \-c | \--compute_size
+.It Fl c
 Causes
-.B pdisk
+.Nm
 to always ignore the device size listed in the partition table
 and compute the device size by other means.
 .SH "Editing Partition Tables"
 An argument which is simply the name of a
 .I device
 indicates that
-.B pdisk
+.Nm
 should edit the partition table of that device.
+.El
+.Sh COMMAND MODE
+The list of commands and their explanations are given below.
+.Pp
+.Bl -tag -width "update"
+.It Em h
+command help
+.It Em p
+print the partition table
+.It Em P
+(print ordered by base address)
+.It Em i
+initialize partition map
+.It Em s
+change size of partition map
+.It Em c
+create new partition (standard MkLinux type)
+.It Em C
+create with type also specified
+.It Em n
+(re)name a partition
+.It Em d
+delete a partition
+.It Em r
+reorder partition entry in map
+.It Em w
+write the partition table
+.It Em q
+quit editing (don't save changes)
+.El
 
-The current top level editing commands are:
-
-.nf
-.RS
-h    command help
-p    print the partition table
-P    (print ordered by base address)
-i    initialize partition map
-s    change size of partition map
-c    create new partition (standard MkLinux type)
-C    (create with type also specified)
-n    (re)name a partition
-d    delete a partition
-r    reorder partition entry in map
-w    write the partition table
-q    quit editing (don't save changes)
-
-.RE
-.fi
 Commands which take arguments prompt for each argument in turn.
 You can also type any number of the arguments separated by spaces
 and those prompts will be skipped.
 The only exception to typeahead are the confirmation prompts on the
-.B i
+.Em i
 and
-.B w
+.Em w
 commands.
 The idea being that if we expect you to confirm the decision we
 shouldn't undermine that by allowing you to be precipitate about it.
@@ -146,7 +121,7 @@ There is currently a bug in the some (all?) of the kernels which causes
 access to the whole disk fail if more than fifteen partitions are in the map.
 
 The
-.B c
+.Em c
 (create new partition) command is the only one with complicated arguments.
 The first argument is the base address (in blocks) of the partition.
 Besides a raw number, you can also specify a partition number followed
@@ -164,47 +139,49 @@ single or double quotes.
 The type of the created partition is the correct type for MkLinux.
 
 The
-.B C
+.Em C
 command is identical to the
-.B c
+.Em c
 command, with the addition of a partition type argument after the
 other arguments.
 
 The
-.B n
+.Em n
 (name) command allows the name of a partition to be changed.
 Note that the various "Apple_Driver" partitions depend
 on the name field for proper functioning.
 I am not aware of any other partition types with this limitation.
 
 The
-.B r
+.Em r
 (reorder) command allows the index number of partitions to be changed.
 The index numbers are constrained to be a contiguous sequence.
 
 The
-.B i
+.Em i
 (initalize) command prompts for the size of the device.
 This was done to get around a bug in the kernel where it reports the wrong
 size for the device.
 
 The
-.B w
+.Em w
 (write) command does write the partition map out,
-but there is currently a bug in the interaction between MkLinux and Mach
-which causes the partition map not to be reinterpreted.
-In order to use the new partition map you must reboot.
+but there is currently a bug in the interaction between the
+disk and the kernel where
+.Nm disklabel
+.Fl c
+.Ar device
+must be issued to cause the kernel to reinterpret the new label.
 
-.SH BUGS
+.Sh BUGS
 Some people believe there should really be just one disk partitioning utility.
-.br
-.B pdisk
+.Pp
+.Nm
 should be able to create HFS partitions that work.
 .br
 Even more help should be available during user input.
-.SH "SEE ALSO"
-.BR fdisk (8), 
-.BR mkswap (8),
-.BR mkfs (8)
-.SH AUTHOR
+.Sh SEE ALSO
+.Xr fdisk 8 , 
+.Xr disklabel 8
+.Sh AUTHOR
 Eryk Vershen (eryk@apple.com)
