--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount.8,v 1.29 2001/04/06 23:56:28 aaron Exp $
+.\"	$OpenBSD: mount.8,v 1.30 2001/04/23 00:10:14 aaron Exp $
 .\"	$NetBSD: mount.8,v 1.11 1995/07/12 06:23:21 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -150,7 +150,7 @@ where it can give a factor of two speed increase.
 (FFS only.)
 Mount the filesystem using soft dependencies.
 Instead of metadata being written immediately, it is written in an ordered
-fasion to keep the on-disk state of the filesystem consistent.
+fashion to keep the on-disk state of the filesystem consistent.
 This results in significant speedups for file create/delete operations.
 This option will be ignored when using the
 .Fl u
