--- a/share/man/man4/dc.4
+++ b/share/man/man4/dc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dc.4,v 1.20 2001/04/18 14:48:15 aaron Exp $
+.\"	$OpenBSD: dc.4,v 1.21 2001/04/23 15:30:25 aaron Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ee.columbia.edu>. All rights reserved.
@@ -88,7 +88,7 @@ Some chips (especially the PNIC) also have peculiar bugs.
 The
 .Nm
 driver does its best to provide generalized support for all
-of these chipsets in order to keep special case code to a minimun.
+of these chipsets in order to keep special case code to a minimum.
 .Pp
 These chips are used by many vendors which makes it
 difficult provide a complete list of all supported cards.
