--- a/share/man/man9/timeout.9
+++ b/share/man/man9/timeout.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: timeout.9,v 1.13 2001/03/15 23:21:39 csapuntz Exp $
+.\"	$OpenBSD: timeout.9,v 1.14 2001/04/23 15:30:27 aaron Exp $
 .\"
 .\" Copyright (c) 2000 Artur Grabowski <art@openbsd.org>
 .\" All rights reserved.
@@ -159,6 +159,7 @@ These functions are implemented in the file
 .Pa sys/kern/kern_timeout.c .
 .Sh SEE ALSO
 .Xr hz 9 ,
+.Xr hzto 9 ,
 .Xr sleep 9 ,
 .Xr splclock 9
 .Sh BUGS
