--- a/sbin/atactl/atactl.8
+++ b/sbin/atactl/atactl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: atactl.8,v 1.5 2001/03/23 02:16:42 deraadt Exp $
+.\"	$OpenBSD: atactl.8,v 1.6 2001/04/23 15:30:26 aaron Exp $
 .\"	$NetBSD: atactl.8,v 1.5 1999/02/24 18:49:14 jwise Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -296,7 +296,7 @@ will output
 .Sq SMART threshold exceeded!
 to stderr and 
 .Xr cron 8
-wil mail it.
+will mail it.
 .Sh DIAGNOSTICS
 .Pp
 Not all devices are created equally. Some may not support the feature sets 
