--- a/sbin/fsck/fsck.8
+++ b/sbin/fsck/fsck.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsck.8,v 1.17 2000/11/09 17:52:56 aaron Exp $
+.\"	$OpenBSD: fsck.8,v 1.18 2001/04/23 15:30:26 aaron Exp $
 .\"	$NetBSD: fsck.8,v 1.14 1996/10/03 20:08:29 christos Exp $
 .\"
 .\" Copyright (c) 1996 Christos Zoulas.  All rights reserved.
@@ -106,5 +106,6 @@ filesystem table
 .Sh SEE ALSO
 .Xr fstab 5 ,
 .Xr fsck_ffs 8 ,
+.Xr fsck_ext2fs 8 ,
 .Xr fsck_msdos 8 ,
 .Xr mount 8
