--- a/sbin/fsck_ffs/fsck_ffs.8
+++ b/sbin/fsck_ffs/fsck_ffs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsck_ffs.8,v 1.12 2000/03/28 23:53:17 deraadt Exp $
+.\"	$OpenBSD: fsck_ffs.8,v 1.13 2001/04/23 15:30:26 aaron Exp $
 .\"	$NetBSD: fsck_ffs.8,v 1.12 1996/09/23 16:18:34 christos Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -38,7 +38,7 @@
 .Dt FSCK_FFS 8
 .Os
 .Sh NAME
-.Nm fsck_ffs , fsck
+.Nm fsck_ffs
 .Nd Fast File System consistency check and interactive repair
 .Sh SYNOPSIS
 .Nm fsck_ffs
@@ -318,5 +318,6 @@ are fully enumerated and explained in Appendix A of
 .Xr fs 5 ,
 .Xr fstab 5 ,
 .Xr fsdb 8 ,
+.Xr fsck 8 ,
 .Xr newfs 8 ,
 .Xr reboot 8
