--- a/share/man/man4/nsphy.4
+++ b/share/man/man4/nsphy.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nsphy.4,v 1.4 2000/10/18 02:38:23 aaron Exp $
+.\"	$OpenBSD: nsphy.4,v 1.5 2001/04/23 15:30:25 aaron Exp $
 .\"	$NetBSD: nsphy.4,v 1.1 1998/11/04 05:53:59 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 The NetBSD Foundation, Inc.
@@ -54,4 +54,5 @@ These PHYs are found on a variety of high-performance Ethernet interfaces.
 .Xr ifmedia 4 ,
 .Xr intro 4 ,
 .Xr mii 4 ,
+.Xr nsphyter 4 ,
 .Xr ifconfig 8
