--- a/share/man/man4/nsphyter.4
+++ b/share/man/man4/nsphyter.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nsphyter.4,v 1.3 2001/04/16 00:13:01 jason Exp $
+.\"	$OpenBSD: nsphyter.4,v 1.4 2001/04/23 15:30:26 aaron Exp $
 .\"
 .\" Copyright (c) 2000 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -42,7 +42,7 @@ The
 .Nm
 driver supports the National Semiconductor
 .Tn PHYTER
-.Tn DP83840
+.Tn DP83843
 Ethernet PHYs.
 This driver also supports the integrated PHY on the
 .Tn MACPHYTER
@@ -52,4 +52,5 @@ These PHYs are found on a variety of high-performance Ethernet interfaces.
 .Xr ifmedia 4 ,
 .Xr intro 4 ,
 .Xr mii 4 ,
+.Xr nsphy 4 ,
 .Xr ifconfig 8
