linksys wpc11 is supported

--- a/share/man/man4/wi.4
+++ b/share/man/man4/wi.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wi.4,v 1.7 2001/04/06 19:11:15 deraadt Exp $
+.\"	$OpenBSD: wi.4,v 1.8 2001/04/24 00:08:33 mickey Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -64,6 +64,7 @@ The compatible cards supported are:
 .It Addtron AWP-100
 .It Cabletron RoamAbout
 .It I-O DATA WN-B11/PCM
+.It Linksys WPC11
 .El
 .Pp
 Note that while Lucent sells both ISA and PCMCIA
