compatility -> compatibility; mpech@prosoft.org.lv

--- a/libexec/ftpd/ftpd.8
+++ b/libexec/ftpd/ftpd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ftpd.8,v 1.38 2001/01/06 18:24:29 millert Exp $
+.\"	$OpenBSD: ftpd.8,v 1.39 2001/04/24 12:54:42 aaron Exp $
 .\"	$NetBSD: ftpd.8,v 1.8 1996/01/14 20:55:23 thorpej Exp $
 .\"
 .\" Copyright (c) 1985, 1988, 1991, 1993
@@ -425,7 +425,7 @@ The virtual host that the connection was made to.
 .Pp
 Although fields exist for logging information on real users, this file is
 only used for anonymous downloads.
-Unused fields exist only for compatility with other
+Unused fields exist only for compatibility with other
 .Nm
 implementations.
 .Sh LOGIN.CONF VARIABLES
