actually it is called 3CR990; tree unlock

--- a/share/man/man4/txp.4
+++ b/share/man/man4/txp.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: txp.4,v 1.1 2001/04/16 02:08:14 jason Exp $
+.\"     $OpenBSD: txp.4,v 1.2 2001/04/29 17:29:59 deraadt Exp $
 .\"
 .\" Copyright (c) 2001 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -34,7 +34,7 @@
 .Os
 .Sh NAME
 .Nm txp
-.Nd 3Com 3XP Typhoon/Sidewinder (3C990) Ethernet interface
+.Nd 3Com 3XP Typhoon/Sidewinder (3CR990) Ethernet interface
 .Sh SYNOPSIS
 .Cd "txp* at pci? dev ? function ?"
 .Sh DESCRIPTION
